# svg-tools

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  svgtools.bat
svgtools/: __init__.py  cli.py  grid.py  info.py  render.py  svg.py
