[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "svgtools"
version = "0.1.0"
description = "Inspect, tile, and render SVG paths with Matplotlib."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "svgpath2mpl",
]
authors = [{name = "Juho"}]

[project.scripts]
svgtools = "svgtools.cli:main"

[tool.setuptools.packages.find]
include = ["svgtools"]
